# task-tracker-py

./: README.md  pyproject.toml  tasks.json
src/mvp/: mvp.ipynb
src/task_tracker/: constants.py  exceptions.py
src/task_tracker/cli/: __init__.py  main.py
src/task_tracker/models/: task.py
src/task_tracker/services/: task_service.py
src/task_tracker/storage/: json_storage.py
src/task_tracker/utils/: time.py
src/task_tracker_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/tests/: __init__.py  test_cli.py  test_json_storage.py  test_task_service.py
src/ui/: kanban.py
