[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "task-tracker-cli"
version = "0.1.0"
requires-python = ">=3.10"
description = "A simple JSON-backed task tracker CLI."

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
task-cli = "task_tracker.cli.main:main"
